# poli

./: README.md
mestrado/src/: .gitignore  .in  AUTHORS  Makefile  Makefile.am  Makefile.in  bootstrap  config.cache  config.status  configure  configure.ac  configure.in  indent.sh  limpa.sh  mfcc.c  projcounts.sh  projcounts.txt  resume.sh  som_vq.c  test.sh  teste.txt  train.sh
mestrado/src/.deps/: mfcc.P  som_vq.P
mestrado/src/CVS/: Baserev  Entries  Repository
mestrado/src/CVS/Base/: teste.c
mestrado/src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
mestrado/src/bak/: mfcc.c.bak
mestrado/src/common/: Makefile.am  Makefile.in  types.c  types.h
mestrado/src/common/CVS/: Entries  Repository
mestrado/src/errorh/: Makefile  Makefile.am  Makefile.in  configure.in  errorh.c  errorh.h
mestrado/src/errorh/.deps/: error_handling.P  errorh.P  errorh.Po
mestrado/src/errorh/CVS/: Entries  Repository
mestrado/src/frmap/: Makefile.am  Makefile.in  frmap.c  frmap.h
mestrado/src/ftrxtr/: Makefile  Makefile.am  Makefile.in  configure.in  maketeste  s_cepstrum.c  s_cepstrum.h  s_complex.c  s_complex.h  s_deriv.c  s_deriv.h  s_fft.c  s_fft.h  s_files.c  s_files.h  s_fmt_wav.c  s_fmt_wav.h  s_integral.c  s_integral.h  s_log.h  s_preemph.c  s_preemph.h  s_samples.c  s_samples.h  s_smptypes.h  s_window.c  s_window.h  teste  teste.c
mestrado/src/ftrxtr/.deps/: s_cepstrum.P  s_complex.P  s_complex.Tpo  s_fft.P  s_files.P  s_fmt_wav.P  s_integral.P  s_preemph.P  s_samples.P  s_window.P
mestrado/src/ftrxtr/CVS/: Entries  Repository
mestrado/src/function/: Makefile  Makefile.am  Makefile.in  configure.in  function.c  function.h
mestrado/src/function/.deps/: function.P  function.Po
mestrado/src/function/CVS/: Entries  Repository
mestrado/src/incstat/: Makefile  Makefile.am  Makefile.in  configure.in  filestats  filestats.c  incstat.c  incstat.h  mfilestats  teste.txt  teste1.txt
mestrado/src/incstat/.deps/: incstat.P  incstat.Po
mestrado/src/incstat/CVS/: Entries  Repository
mestrado/src/inparse/: Makefile  Makefile.am  Makefile.in  configure.in  inparse.c  inparse.h  maketeste  teste  teste.c  teste.sh
mestrado/src/inparse/.deps/: inparse.P
mestrado/src/inparse/CVS/: Entries  Repository
mestrado/src/lvq_rec/: Makefile.am  Makefile.in  lvq.net  lvq.test.txt  lvq.train.txt  lvq_rec.c  result_atm.txt  test.sh  train.sh  trlvq16.sh  trlvq32.sh  trlvq64.sh  trnum.sh  tslvq16.sh
mestrado/src/lvq_rec/CVS/: Entries  Repository
mestrado/src/matrix/: Makefile  Makefile.am  Makefile.in  configure.in  maketeste  matrix.c  matrix.h  teste  teste.c
mestrado/src/matrix/.deps/: matrix.P  matrix.Po
mestrado/src/matrix/CVS/: Entries  Repository
mestrado/src/mfcc/: Makefile.am  Makefile.in  hz2mel.c  mel2hz.c  mfcc.c  mkconv
mestrado/src/mfcc/CVS/: Repository
mestrado/src/nnet/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  fileaux.c  gram.txt  indent.sh  limpa.sh  maketeste  mfiles  nnet_actv.c  nnet_actv.h  nnet_conns.c  nnet_conns.h  nnet_files.c  nnet_files.h  nnet_files_nnet.c  nnet_files_nnet.h  nnet_layers.c  nnet_layers.h  nnet_lvq.c  nnet_lvq.h  nnet_lvq_window.c  nnet_lvq_window.h  nnet_metrics.c  nnet_metrics.h  nnet_nnet.c  nnet_nnet.h  nnet_sets.c  nnet_sets.h  nnet_som.c  nnet_som.h  nnet_som_ngb.c  nnet_som_ngb.h  nnet_train.c  nnet_train.h  nnet_types.h  nnet_units.c  (+8 more)
mestrado/src/nnet/.deps/: nnet_actv.P  nnet_conns.P  nnet_files.P  nnet_files_nnet.P  nnet_layers.P  nnet_metrics.P  nnet_nnet.P  nnet_sets.P  nnet_train.P  nnet_units.P  nnet_weights.P
mestrado/src/nnet/CVS/: Entries  Repository
mestrado/src/nnet/bak/: lixo.c  nnet_actv.bak  nnet_conns.c.bak  nnet_conns.h.bak  nnet_layers.c.bak  nnet_units.c.bak  teste.c.bak
mestrado/src/nnet/lvq/: Makefile  Makefile.am  Makefile.in  configure.in  lvqtest.c  nnet_lvq.c  nnet_lvq.h  nnet_lvq_window.c  nnet_lvq_window.h
mestrado/src/nnet/som/: Makefile  Makefile.am  Makefile.in  config.status  configure.in  maketeste  nnet_som.c  nnet_som.h  nnet_som_ngb.c  nnet_som_ngb.h  som16.net  som64.net  somtest.c  somtest.sh  test.set
mestrado/src/som_rec/: Makefile.am  Makefile.in  lixo.sh  lixo.txt  som_rec.c  test.sh  test16.sh  test25.sh  test36.sh  test64.sh  train.sh  train16.sh  train25.sh  train36.sh  train64.sh  traintest.sh
mestrado/src/som_rec/log/: alcaim3-stats.txt  duracao-alcaim3.txt
mestrado/src/som_rec/mse/: som16_alcaim1.mse  som16_alcaim2.mse  som16_alcaim3.mse  som16_spoltech.mse  som25_alcaim1.mse  som25_alcaim2.mse  som25_spoltech.mse  som36_alcaim1.mse  som36_alcaim2.mse  som36_spoltech.mse  som64_alcaim1.mse  som64_alcaim2.mse  som64_spoltech.mse
mestrado/src/som_rec/old/: test32.sh  train32.sh  train_alc1.sh
mestrado/src/som_vq_f/: Makefile.am  Makefile.in  som16l.net  som32l.net  som32l01.net  som32l11.net  som_vq_f.c  test.sh  tr16l01.net  tr16l11.net  train.sh  trbool.sh  trl01.sh  trl11.sh  tsl01.sh  tsl11.sh  tsnome.sh  tsnum.sh  tssom16.sh  tssom32.sh  tssom64.sh
mestrado/src/som_vq_t/: Makefile.am  Makefile.in  mse.txt  som_vq_t.c  train.sh  trbool.sh  trnum.sh
mestrado/src/strutils/: Makefile  Makefile.am  Makefile.in  configure.in  maketeste  strutils.c  strutils.h  teste  teste.c  tsplit  tsplit.c
mestrado/src/strutils/.deps/: strutils.P  strutils.Po
mestrado/src/strutils/CVS/: Entries  Repository
mestrado/src/strutils/testdir/: teste.txt
mestrado/src/table/: Makefile  Makefile.am  Makefile.in  configure.in  maketstab  table.c  table.h  tstab.c
mestrado/src/table/.deps/: table.P  table.Po
mestrado/src/table/teste/: phrases.ctl  phrases.db  speakers.ctl  speakers.db
mestrado/src/teste/: teste.txt
mestrado/src/trmap/: Makefile  Makefile.am  Makefile.in  configure.in  teste.c  trmap.c  trmap.h
mestrado/src/trmap/.deps/: trmap.P  trmap.Po
mestrado/src/trmap/CVS/: Entries  Repository
mestrado/src/vector/: Makefile  Makefile.am  Makefile.in  configure.in  maketeste  teste  teste.c  vector.c  vector.h  vectorstat.c  vectorstat.h
mestrado/src/vector/.deps/: vector.P  vector.Po  (+2 more)
(+4987 files in other folders)
