noinst_LIBRARIES = libftrxtr.a
libftrxtr_a_SOURCES = s_smptypes.h \
  s_log.h \
  s_complex.h \
  s_complex.c \
  s_integral.h \
  s_integral.c \
  s_files.h \
  s_files.c \
  s_fmt_wav.h \
  s_fmt_wav.c \
  s_samples.h \
  s_samples.c \
  s_window.h \
  s_window.c \
  s_preemph.h \
  s_preemph.c \
  s_fft.h \
  s_fft.c \
  s_cepstrum.h \
  s_cepstrum.c
#libftrxtr_a_LIBADD = $(top_builddir)/incstat/libincstat.a \
#  $(top_builddir)/strutils/libstrutils.a
CFLAGS = -ansi -Wall -Werror -ggdb
