dnl Process this file with autoconf to produce a configure script.
AC_INIT(s_cepstrum.c)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror strtod)

AC_OUTPUT(Makefile)
