SUBDIRS = som
noinst_LIBRARIES = libnnet.a
libnnet_a_SOURCES = \
  nnet_types.h \
  nnet_nnet.h \
  nnet_nnet.c \
  nnet_layers.h \
  nnet_layers.c \
  nnet_units.h \
  nnet_units.c \
  nnet_conns.h \
  nnet_conns.c \
  nnet_weights.h \
  nnet_weights.c \
  nnet_actv.h \
  nnet_actv.c \
  nnet_metrics.h \
  nnet_metrics.c \
  nnet_sets.h \
  nnet_sets.c \
  nnet_train.h \
  nnet_train.c \
  nnet_files.h \
  nnet_files.c \
  nnet_files_nnet.h \
  nnet_files_nnet.c
AM_CFLAGS = -ansi -Wall -Werror -ggdb
