dnl Process this file with autoconf to produce a configure script.
AC_INIT(nnet_lvq.h)

dnl Checks for programs.

dnl Checks for libraries.
AC_CHECK_LIB(m, main)

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_OUTPUT(Makefile)
